bug(row-col-spacing): fix row and column spacing  - fix spacing on the home cause section component  - fix pagination component spacing  - fix the card overlay for closed cause  - fix spacing on the cause sider donate button [fixes]

--- a/components/cards/Cause/index.module.scss
+++ b/components/cards/Cause/index.module.scss
@@ -11,7 +11,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     z-index: 2;
     cursor: pointer;
-    margin: $padding calc(#{$padding}/ 2);
+    margin: 0 calc(#{$padding}/ 2);
     pointer-events: none;
   }
 
